--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <p>
             Designed and implemented a responsive portfolio to showcase my skills and projects using HTML, CSS, and JavaScript.
           </p>
+          <!-- Hello -->
         </div>
       </div>
     </div>
